# coursework

ap1400-2/AP1400-2-HW2-main/include/: crypto.h
csc1001/1/: q1.py  q2.py  q3.py  q4.py  q5.py  q6.py
csc1001/2/: q1.py  q2.py  q3.py  q4.py  q5.py  q6.py
csc1001/3/: q1.py  q2.py  q3.py
csc1001/4/: q1.py  q2.py  q3.py
csc1002/: A1.py  A2.py  A3.py
csc3002/homework/as1/Problem_1/Problem1_qt/: CMakeLists.txt  Combinatorics.cpp  Combinatorics.h
csc3002/homework/as2/Problem_1/Problem1/: CMakeLists.txt  reversequeue.h  revesequeue  revesequeue.cpp
csc3002/homework/proj1/: CMakeLists.txt  (+8 more)
csc3100/A1/: GridSum.java  GridSum.py  PtrSort.py  a1_report.md
csc3100/A2/: CSC3100 Assignment 2 REPORT.docx
csc3100/A3/: A3 REPORT.docx  pig_cup.py  tree_sum.cpp  tree_sum.py
csc3100/A4/: report.docx
csc3100/lec_codes/: listApp.ipynb
dda3020/.ipynb_checkpoints/: hw1-checkpoint.ipynb
dda3020/hw1/: code_hw1_122090636.ipynb  house_prices.csv  report_hw1_122090636.md
dda3020/hw2/: Logistic_Regression.ipynb
dda3020/hw3/: DDA3020_2024_Spring_homework3.ipynb
dda3020/hw4/: dda3020_hw4_code_122090636.ipynb  dev.txt  train.txt
eco3121/as1/: as1_p1.do
eco3121/as2/: as2_p1.do
eco3121/as3/: Rainfall.dta  Rainfall_temp.dta  aghousehold.dta  as3_p1.do  landlaw.dta
eco3121/as4/: DID_Example.csv
mat2020/: Untitled.ipynb
mat3007/hw1/: products.py  shortest.py
sta2001/: 1.py  2.py  3.py  4.ipynb
sta2002/hw1/: .Rapp.history  2.r  smiles.txt
sta2002/hw2/: 7.r
sta2002/hw5/: 2.py  5.r
ucb_cs61b/proj_bearmap/: README.md
ucb_cs61b/proj_gitlet/: README.md
(+1912 files in other folders)
